--- a/src/SudokuTable.css
+++ b/src/SudokuTable.css
@@ -1,13 +1,19 @@
 .SudokuTable {
     background-color: white;
     border: #000000;
-    
+    text-align: center;
 }
 
-.SudokuInput {
-    text-align: center;
-    border:1px solid black;
-    width: 60px;
-    height: 60px
+.topBorder {
+    border-top: 5px solid black;
+}
 
+.bottomBorder {
+    border-bottom: 5px solid black;
+}
+.leftBorder {
+    border-left: 5px solid black;
+}
+.rightBorder {
+    border-right: 5px solid black;
 }
